# budget-rs

./: .gitignore  Cargo.toml  README.md  TEMPLATE.md  Trunk.toml  index.html  manifest.json  package-lock.json  package.json  service_worker.js  tailwind.config.js  workbox-config.js
.github/workflows/: build_yew.yml  deploy_yew.yml  main.yml  yew.yml
src/: add_expense.rs  analysis.rs  app.rs  commands.rs  components.rs  csv.rs  data.rs  helpers.rs  main.rs  manage_budgets.rs  manage_limits.rs  overview.rs  pages.rs  prelude.rs  router.rs  state.rs  tailwind.css  transaction_log.rs  view_reports.rs
src/components/: back_button.rs  button.rs  category_analysis.rs  commands.rs  data_modal.rs  data_transfer.rs  dialog.rs  footer.rs  header.rs  home_link.rs  input_amount.rs  monthly_overview.rs  transaction_logs.rs
src/pages/: add_expense.rs  add_transaction.rs  dashboard.rs  data_transfer.rs  manage_limits.rs  view_reports.rs
