[package]
name = "budget-rs"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }
web-sys = { version = "0.3.82", features = ["HtmlDialogElement"] }
gloo = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
numfmt = "1.2.0"
